fix: исправление после ревью